MBug: Use flex to align choice in issueview to grow horizontally.

--- a/apps/mbug/style.css
+++ b/apps/mbug/style.css
@@ -114,27 +114,25 @@ body {
 
 .popupChoiceView {
   padding: 8px;
-  margin-right: 20px;
   margin-left: 20px;
   outline: none;
   opacity: 0.76;
   background: transparent;
+  display: flex;
+  flex: 1 0 auto;
+  align-items: center;
 }
 
 .popupChoiceView .value {
-  width: 350px;
-  display: inline-block;
-  vertical-align: middle;
   font-size: 22pt;
   text-align: left;
   color: #222;
-  margin-left: 30px;
-  margin-top: -35px;
+  display: flex;
+  flex: 1 0 auto;
+  align-items: center;
 }
 
 .popupChoiceView img {
-  margin-left: 10px;
-  margin-top: -5px;
   opacity: 0.76;
 }
 
